# Avanzo_Portal

./: .gitignore  patch_profile.py  patch_team.py  patch_team_buttons.py
AvanzoDashboard-Backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  check_admin_role.py  check_db_schema.py  check_dept.py  check_migrations.py  check_status.py  check_tenants.py  check_users.py  clear_all_orgs.py  create_tenants.py  create_users.py  debug_admin.py  debug_auth.py  debug_output.txt  debug_output2.txt  debug_tasks.py  docker-compose.yml  entrypoint.sh  fix_tenant_assignments.py  list_schemas.py  list_users.py  populate_services.py  pyproject.toml  requirements.txt  reset_db.py  seed_demo.py  test_amal_login.py  test_cyber_users.py  test_login.py  test_payload.py  test_pulse.py  test_rahul_role.py  verify_password.py
AvanzoDashboard-Backend/accounts/: admin.py  apps.py  managers.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
AvanzoDashboard-Backend/activity/: admin.py  apps.py  consumers.py  models.py  serializers.py  signals.py  urls.py  views.py
AvanzoDashboard-Backend/analytics/: serializers.py  services.py  urls.py  views.py
AvanzoDashboard-Backend/attendance/: admin.py  models.py  report_views.py  serializers.py  services.py  tasks.py  urls.py  views.py
AvanzoDashboard-Backend/clients/: models.py  serializers.py  views.py
AvanzoDashboard-Backend/config/: __init__.py  asgi.py  celery.py  public_urls.py  routing.py  settings.py  urls.py
AvanzoDashboard-Backend/core/: asgi_middleware.py  authentication.py  (+9 more)
(+283 files in other folders)
